--- a/app.html
+++ b/app.html
@@ -40,47 +40,94 @@
 		article -->
         <!--Inside index.html -->
 
-<script>
+		<button id="rzp-button1">Pay</button>
+		<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+		<script>
+		var options = {
+			"key": "rzp_test_A4XEPaPN39SC4E", // Enter the Key ID generated from the Dashboard
+			"amount": "50000", // Amount is in currency subunits. Default currency is INR. Hence, 50000 refers to 50000 paise
+			"currency": "INR",
+			"name": "Acme Corp",
+			"description": "Test Transaction",
+			"image": "https://example.com/your_logo",
+			"order_id": "order_LWPWlYnZ7oOgvj", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+			"handler": function (response){
+				alert(response.razorpay_payment_id);
+				alert(response.razorpay_order_id);
+				alert(response.razorpay_signature)
+			},
+			"prefill": {
+				"name": "Gaurav Kumar",
+				"email": "gaurav.kumar@example.com",
+				"contact": "9000090000"
+			},
+			"notes": {
+				"address": "Razorpay Corporate Office"
+			},
+			"theme": {
+				"color": "#3399cc"
+			}
+		};
+		var rzp1 = new Razorpay(options);
+		rzp1.on('payment.failed', function (response){
+				alert(response.error.code);
+				alert(response.error.description);
+				alert(response.error.source);
+				alert(response.error.step);
+				alert(response.error.reason);
+				alert(response.error.metadata.order_id);
+				alert(response.error.metadata.payment_id);
+		});
+		document.getElementById('rzp-button1').onclick = function(e){
+			rzp1.open();
+			e.preventDefault();
+		}
+		</script>
+
+<!-- <script>
 var options = {
-	"key": "rzp_test_A4XEPaPN39SC4E",
-	"key_secret": 'EDiiQyB00sRK1xZh8jSvuVkI',
-	"amount": "49900",
-	"currency": "INR",
-	"name": "Social Pro",
-	"description": "Pay & Checkout this Course, Upgrade your DSA Skill",
-	"order_id": "order_LQEG8x7PiOQ7XE",
-	"handler": function (response){
+	key: "rzp_test_A4XEPaPN39SC4E",
+	key_secret:"EDiiQyB00sRK1xZh8jSvuVkI",
+	amount: "49900",
+	currency: "INR",
+	name: "Social Pro",
+	description: "Pay & Checkout this Course, Upgrade your DSA Skill",
+	order_id: "order_LWA4sNOcQKXv1N",
+	callback_url:"localhost:5000/v1/advertiser/transaction/paymentVerify/?ads_Id=63a44e8f397debd3f8450907&contract_Id=63a44e8f397debd3f8450907&influ_Id=63eb5c92a0f01fd4e0d3c64c&order_id=order_LWA4sNOcQKXv1N",
+	handler: function (response){
 		console.log(response)
 		alert("This step of Payment Succeeded");
 	},
-	"prefill": {
+	prefill: {
 		//Here we are prefilling random contact
-		"contact":"9876543210",
+		contact:"9876543210",
 		//name and email id, so while checkout
-		"name": "Twinkle Sharma",
-		"email": "smtwinkle@gmail.com"
+		name: "Twinkle Sharma",
+		email: "smtwinkle@gmail.com"
 	},
-	"notes" : {
-		"description":"Best Course for SDE placements",
-		"language":"Available in 4 major Languages JAVA,C/C++, Python, Javascript",
-		"access":"This course have Lifetime Access"
+	notes : {
+		description:"Best Course for SDE placements",
+		language:"Available in 4 major Languages JAVA,C/C++, Python, Javascript",
+		access:"This course have Lifetime Access"
 	},
-	"theme": {
-		"color": "#2300a3"
+	theme: {
+		color: "#121212"
 	}
 };
 var razorpayObject = new Razorpay(options);
-console.log(razorpayObject);
 razorpayObject.on('payment.failed', function (response){
 		console.log(response);
 		alert("This step of Payment Failed");
-});
+	});
 	
-document.getElementById('pay-button').onclick = function(e){
-	razorpayObject.open();
+	document.getElementById('pay-button').onclick = function(e){
+		
+		razorpayObject.open();
 	e.preventDefault();
 }
-</script>
+
+
+</script> -->
 
 </body>
 
