--- a/app.html
+++ b/app.html
@@ -50,8 +50,8 @@
 			"name": "Acme Corp",
 			"description": "Test Transaction",
 			"image": "https://example.com/your_logo",
-			"order_id": "order_LWPWlYnZ7oOgvj", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
-			"handler": function (response){
+			"order_id": "order_Lcr4HWRQXsvVM4", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+			"handler": function (response){ 
 				alert(response.razorpay_payment_id);
 				alert(response.razorpay_order_id);
 				alert(response.razorpay_signature)
@@ -68,6 +68,7 @@
 				"color": "#3399cc"
 			}
 		};
+
 		var rzp1 = new Razorpay(options);
 		rzp1.on('payment.failed', function (response){
 				alert(response.error.code);
@@ -87,7 +88,6 @@
 <!-- <script>
 var options = {
 	key: "rzp_test_A4XEPaPN39SC4E",
-	key_secret:"EDiiQyB00sRK1xZh8jSvuVkI",
 	amount: "49900",
 	currency: "INR",
 	name: "Social Pro",
@@ -122,13 +122,11 @@ razorpayObject.on('payment.failed', function (response){
 	
 	document.getElementById('pay-button').onclick = function(e){
 		
-		razorpayObject.open();
+	razorpayObject.open();
 	e.preventDefault();
 }
-
-
 </script> -->
 
-</body>
 
+</body>
 </html>
