Admin to influencern Transfer API 1

--- a/app.html
+++ b/app.html
@@ -50,7 +50,7 @@
 			"name": "Acme Corp",
 			"description": "Test Transaction",
 			"image": "https://example.com/your_logo",
-			"order_id": "order_Lcr4HWRQXsvVM4", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+			"order_id": "order_LfLDtGA81xJls6", //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
 			"handler": function (response){ 
 				alert(response.razorpay_payment_id);
 				alert(response.razorpay_order_id);
@@ -87,7 +87,7 @@
 
 <!-- <script>
 var options = {
-	key: "rzp_test_A4XEPaPN39SC4E",
+	key: "rzp_test_A4XEPaPN39SC4E", 
 	amount: "49900",
 	currency: "INR",
 	name: "Social Pro",
